<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Orientation Control</string>
    <string name="app_hash_tag">#ScreenOrientationControl</string>
    <string name="app_version_format" tools:ignore="MissingTranslation">v%1$s</string>
    <string name="notification_channel_name">@string/app_name</string>
    <string name="custom_widget">Custom Widget</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="label_unspecified">unspecified</string>
    <string name="label_portrait">portrait</string>
    <string name="label_landscape">landscape</string>
    <string name="label_reverse_portrait">rev port</string>
    <string name="label_reverse_landscape">rev land</string>
    <string name="label_full_sensor">full sensor</string>
    <string name="label_sensor_portrait">sensor port</string>
    <string name="label_sensor_landscape">sensor land</string>
    <string name="label_sensor_lie_left">lie left</string>
    <string name="label_sensor_lie_right">lie right</string>
    <string name="label_sensor_headstand">headstand</string>
    <string name="label_sensor_full">full</string>
    <string name="label_sensor_forward">forward</string>
    <string name="label_sensor_reverse">reverse</string>
    <string name="label_clear">clear</string>
    <string name="label_setting">setting</string>
    <string name="description_unspecified">Unspecified orientation from this app. Device will be the original orientation of the displayed app</string>
    <string name="description_portrait">Fixed to portrait</string>
    <string name="description_landscape">Fixed to landscape</string>
    <string name="description_reverse_portrait">Fixed to reverse portrait</string>
    <string name="description_reverse_landscape">Fixed to reverse landscape</string>
    <string name="description_full_sensor">Rotate in all orientations by sensor (system control)</string>
    <string name="description_sensor_portrait">Fixed to portrait, automatically flip upside down by sensor</string>
    <string name="description_sensor_landscape">Fixed to landscape, automatically flip upside down by sensor</string>
    <string name="description_sensor_lie_left">Rotate 90 degrees to the left with respect to the sensor. If you lie on left lateral and use this, the top and bottom will match.</string>
    <string name="description_sensor_lie_right">Rotate 90 degrees to the right with respect to the sensor. If you lie on right lateral and use this, the top and bottom will match.</string>
    <string name="description_sensor_headstand">Rotate 180 degrees with respect to the sensor. If you use this by headstand, the top and bottom will match.</string>
    <string name="description_sensor_full">Rotate in all orientations by sensor (app control)</string>
    <string name="description_sensor_forward">Rotate in forward orientations by the sensor. Does not rotate in reverse orientations</string>
    <string name="description_sensor_reverse">Rotate in reverse orientations by the sensor. Does not rotate in forward orientations</string>
    <string name="description_clear">Clear each app setting, follow global setting</string>
    <string name="description_settings">Launch settings</string>
    <string name="menu_title_status">Status</string>
    <string name="menu_description_status_running">Running</string>
    <string name="menu_description_status_waiting">Waiting</string>
    <string name="button_status_start">START</string>
    <string name="button_status_stop">STOP</string>
    <string name="menu_title_detailed_settings">Detailed Settings</string>
    <string name="menu_description_detailed_settings_description">Theme and detailed behavior settings of notification</string>
    <string name="menu_title_setting_for_each_app">Setting for each app</string>
    <string name="menu_description_setting_for_each_app">Set the default screen orientation for each app</string>
    <string name="menu_title_app_theme">App theme</string>
    <string name="menu_description_app_theme_system">Follow system</string>
    <string name="menu_description_app_theme_light">Light</string>
    <string name="menu_description_app_theme_dark">Dark</string>
    <string name="menu_title_custom_widget_config">Change custom widget settings</string>
    <string name="menu_description_custom_widget_config">Reconfigure placed custom widgets</string>
    <string name="caution_auto_rotate">Please change the system setting to auto-rotate. Reverse setting may not be possible</string>
    <string name="caution_consumes_power">\"sensor port\", \"sensor land\", \"lie left\", \"lie right\", \"headstand\", \"full\", \"forward\" and \"reverse\" will monitor the accelerometer. Therefore, power consumption may increase</string>
    <string name="package_check_disabled">Please turn on the switch to enable this function</string>
    <string name="search_apps">Search apps</string>
    <string name="no_app_caution">No apps that match the search conditions</string>
    <string name="check_show_all_app">Show all apps</string>
    <string name="button_reset_each_app_setting">Reset</string>
    <string name="button_reset_theme">Reset theme</string>
    <string name="button_reset_layout">Reset button layout</string>
    <string name="button_foreground_color">fg</string>
    <string name="button_background_color">bg</string>
    <string name="button_selected_foreground_color">sel. fg</string>
    <string name="button_selected_background_color">sel. bg</string>
    <string name="button_base_color">base</string>
    <string name="menu_title_use_blank_icon_for_notification">Make the status bar icon transparent</string>
    <string name="menu_description_use_blank_icon_for_notification_on">Display transparent icon in the status bar</string>
    <string name="menu_description_use_blank_icon_for_notification_off">Display icon that reflects the status in the status bar</string>
    <string name="menu_title_distinguish_power_source_type">Control by power source type</string>
    <string name="menu_description_distinguish_power_source_type_on">Distinguish between power source types</string>
    <string name="menu_description_distinguish_power_source_type_off">Does not distinguish between power source types</string>
    <string name="menu_title_auto_rotate_warning">System setting warning</string>
    <string name="menu_description_auto_rotate_warning_on">Show warning if system setting is not auto-rotate</string>
    <string name="menu_description_auto_rotate_warning_off">Don\'t show warning if system setting is not auto-rotate</string>
    <string name="menu_title_notification_privacy">Notification privacy</string>
    <string name="menu_description_notification_privacy_on">Notify as secret content</string>
    <string name="menu_description_notification_privacy_off">Notify as public content</string>
    <string name="menu_title_system_notification">Notification Settings</string>
    <string name="menu_description_system_notification_description">Open system notification settings</string>
    <string name="menu_title_system_app">App Info</string>
    <string name="menu_description_system_app_description">Open system app info</string>
    <string name="menu_title_icon_shape">Icon shape</string>
    <string name="menu_description_icon_shape_circle">Circle</string>
    <string name="menu_description_item_shape_squircle">Squircle</string>
    <string name="menu_description_icon_shape_rounded_square">Rounded square</string>
    <string name="menu_description_icon_shape_teardrop">Teardrop</string>
    <string name="menu_description_icon_shape_hexagon">Hexagon</string>
    <string name="menu_title_power_plugged_orientation">Orientation when power is connected</string>
    <string name="menu_description_power_plugged_orientation">Changes to the orientation set when the power is connected</string>
    <string name="menu_title_wired_power_plugged_orientation">Orientation when wired power is connected</string>
    <string name="menu_description_wired_power_plugged_orientation">Changes to the orientation set when the wired power is connected</string>
    <string name="menu_title_wireless_power_plugged_orientation">Orientation when wireless power is connected</string>
    <string name="menu_description_wireless_power_plugged_orientation">Changes to the orientation set when the wireless power is connected</string>
    <string name="menu_title_dock_power_plugged_orientation">Orientation when dock power is connected</string>
    <string name="menu_description_dock_power_plugged_orientation">Changes to the orientation set when the dock power is connected</string>
    <string name="menu_title_headset_plugged_orientation">Orientation when earphone is connected</string>
    <string name="menu_description_headset_plugged_orientation">Changes to the orientation set when the earphone is connected</string>
    <string name="dialog_title_reset_theme">Confirmation</string>
    <string name="dialog_message_reset_theme">Would you like to reset theme?</string>
    <string name="dialog_title_reset_layout">Confirmation</string>
    <string name="dialog_message_reset_layout">Would you like to reset button layout?</string>
    <string name="dialog_title_overlay_permission">Permission required</string>
    <string name="dialog_message_overlay_permission">To use this app, need to allow \"display over other apps\".</string>
    <string name="dialog_message_overlay_permission_go">To use this app, need to allow \"display over other apps\".\nGo edition devices may not be able to grant permission. In that case, you cannot use this app, so please uninstall this app.</string>
    <string name="dialog_title_usage_access">Permission required</string>
    <string name="dialog_message_usage_access">Usage access permission is required to use this feature</string>
    <string name="dialog_button_open_settings">Go settings</string>
    <string name="dialog_title_review">Are you satisfied?</string>
    <string name="dialog_message_review">Please cheer me up by 5-stars review.\nIf there is a problem, please report it to me</string>
    <string name="dialog_button_review">Review</string>
    <string name="dialog_button_send_mail">Report</string>
    <string name="dialog_notification_permission_title">Please allow notification</string>
    <string name="dialog_notification_permission_message">Please allow notification from \"App Info\", to show control panel</string>
    <string name="app_info">App info</string>
    <string name="caution_notification">Notification is not allowed. Please allow permission to display the control panel.</string>
    <string name="button_setting_notification">SETTING</string>
    <string name="toast_could_not_open_setting">Could not open system setting</string>
    <string name="toast_system_settings">Please change the system setting to auto-rotate</string>
    <string name="toast_select_item_max">Cannot add more than 6</string>
    <string name="toast_select_item_min">At least one is required</string>
    <string name="toast_fail_to_initialize_sensor">Accelerometer initialization failed</string>
    <string name="toast_no_permission_to_usage_access">No permissions to usage access</string>
    <string name="options_menu_license">Open source licenses</string>
    <string name="options_menu_source_code">Source code</string>
    <string name="options_menu_privacy_policy">Privacy policy</string>
    <string name="options_menu_mail_to_developer">Mail to developer</string>
    <string name="options_menu_share_this_app">Share this app</string>
    <string name="options_menu_play_store">Google Play store</string>
    <string name="options_menu_relevant_ads">Relevant Ads</string>
    <string name="menu_title_widget_config">Widget Config</string>
    <string name="menu_widget_config_divider">↑enabled icons\n↓disabled icons</string>
    <string name="menu_title_widget_list">Widget List</string>
</resources>