<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/package_check_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/package_check_disabled"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_caution"
        app:drawableEndCompat="@drawable/ic_arrow_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:elevation="8dp"
        android:paddingStart="@dimen/margin_menu_horizontal"
        android:paddingTop="2dp"
        android:paddingEnd="@dimen/margin_menu_horizontal"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <CheckBox
            android:id="@+id/show_all_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/check_show_all_app"
            android:textDirection="locale"
            />

        <TextView
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_reset_button"
            android:paddingStart="32dp"
            android:paddingTop="10dp"
            android:paddingEnd="32dp"
            android:paddingBottom="10dp"
            android:text="@string/button_reset_each_app_setting"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_description"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/package_check_disabled"
        />

    <EditText
        android:id="@+id/search_window"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_search_window"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/search_apps"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/package_check_disabled"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_window"
        />

    <TextView
        android:id="@+id/no_app_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/no_app_caution"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_window"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
