<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/color_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/foreground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="@dimen/margin_menu_sample"
            android:paddingBottom="@dimen/margin_menu_sample"
            >

            <ImageView
                android:id="@+id/sample_foreground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sample"
                android:contentDescription="@null"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_circle"
                />

            <TextView
                android:id="@+id/label_foreground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_menu_sample"
                android:text="@string/button_foreground_color"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/text_color_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sample_foreground"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="@dimen/margin_menu_sample"
            android:paddingBottom="@dimen/margin_menu_sample"
            >

            <ImageView
                android:id="@+id/sample_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sample"
                android:contentDescription="@null"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_circle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_menu_sample"
                android:text="@string/button_background_color"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/text_color_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sample_background"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/foreground_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="@dimen/margin_menu_sample"
            android:paddingBottom="@dimen/margin_menu_sample"
            >

            <ImageView
                android:id="@+id/sample_foreground_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sample"
                android:contentDescription="@null"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_circle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_menu_sample"
                android:text="@string/button_selected_foreground_color"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/text_color_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sample_foreground_selected"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="@dimen/margin_menu_sample"
            android:paddingBottom="@dimen/margin_menu_sample"
            >

            <ImageView
                android:id="@+id/sample_background_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sample"
                android:contentDescription="@null"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_circle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_menu_sample"
                android:text="@string/button_selected_background_color"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/text_color_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sample_background_selected"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="@dimen/margin_menu_sample"
            android:paddingBottom="@dimen/margin_menu_sample"
            >

            <ImageView
                android:id="@+id/sample_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sample"
                android:contentDescription="@null"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_circle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_menu_sample"
                android:text="@string/button_base_color"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/text_color_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sample_base"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/reset_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/margin_menu_horizontal"
        android:layout_marginEnd="@dimen/margin_menu_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_reset_button"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingEnd="32dp"
        android:paddingBottom="12dp"
        android:text="@string/button_reset_theme"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/text_description"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icon_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        >

        <ImageView
            android:id="@+id/icon_shape_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/margin_menu_horizontal"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_circle"
            app:tint="?attr/colorSecondary"
            />

        <TextView
            android:id="@+id/icon_shape_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_menu_horizontal"
            android:layout_marginTop="@dimen/margin_menu_vertical"
            android:text="@string/menu_title_icon_shape"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?android:attr/textColorPrimary"
            android:textDirection="locale"
            android:textSize="@dimen/text_title"
            app:layout_constraintEnd_toStartOf="@+id/icon_shape_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/icon_shape_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_menu_horizontal"
            android:layout_marginBottom="@dimen/margin_menu_vertical"
            android:text="@string/menu_description_icon_shape_circle"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="?android:attr/textColorSecondary"
            android:textDirection="locale"
            android:textSize="@dimen/text_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_shape_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_shape_title"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/visible_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="84dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryVariant"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/menu_widget_config_divider"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_caution"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invisible_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="5"
        />
</LinearLayout>
